Allow access and download of reports via the frontend

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -607,3 +607,9 @@ ul.subrecord-form-list {
     }
   }
 }
+
+#reportListing {
+  .accordion-heading {
+    #gradient > .vertical(#F3F3F3, #EDEDED);
+  }
+}
