--- a/public/app/views/site/resource.html.erb
+++ b/public/app/views/site/resource.html.erb
@@ -1,3 +1,15 @@
+<%
+   locations = {}
+
+   if not @resource['instances'].blank?
+     @resource['instances'].each do |instance|
+       instance['container']['container_locations'].each do |cl|
+         next if cl['status'] === 'previous'
+         locations[cl['ref']] = cl['_resolved']
+       end
+     end
+   end
+%>
 <div class="title-pane">
   <div class="row-fluid">
     <div class="span3">
@@ -21,7 +33,7 @@
           <% if @resource['subjects'].length > 0 %>
             <li><a href="#subjects"><%= I18n.t("subject._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
-          <% if @resource['instances'].length > 0 %>
+          <% if locations.length > 0 %>
             <li><a href="#locations"><%= I18n.t("location._html.plural") %> <span class="icon-chevron-right"></span></a></li>
           <% end %>
           <% if @tree['children'].length %>
@@ -82,15 +94,7 @@
           </section>
         <% end %>
 
-        <% if @resource['instances'].length > 0 %>
-          <% 
-            locations = {}
-            @resource['instances'].each do |instance|
-              instance['container']['container_locations'].each do |cl|
-                locations[cl['ref']] = cl['_resolved']
-              end
-            end
-          %>
+        <% if not locations.empty? %>
           <section id="locations">
             <h3><%= I18n.t("location._html.plural") %></h3>
             <ul class="results-list">
