Add 'accession' instance_type and allow modification of the instance type after adding the sub record

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -411,6 +411,9 @@ ul.subrecord-form-list {
   li {
     padding: 10px;
   }
+  .alert {
+    margin: 0;
+  }
   .form-actions {
     margin: 0;
   }
