--- a/backend/app/views/reports/_listing.erb
+++ b/backend/app/views/reports/_listing.erb
@@ -11,7 +11,7 @@
       <tr>
         <% report.headers.each do |heading| %>
           <td>
-            <%= record[heading] %>
+            <%= CGI.escape(record[heading].to_s) %>
           </td>
         <% end %>
       </tr>
