--- a/backend/app/views/reports/report.erb
+++ b/backend/app/views/reports/report.erb
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<?xml version="1.0" encoding="UTF-8"?>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <%= erb :'reports/_styles', :locals => {:report => report} %>
   </head>
   <body class="<%= params[:format] %>">
