--- a/backend/app/views/reports/_styles.erb
+++ b/backend/app/views/reports/_styles.erb
@@ -2,12 +2,14 @@
     /* ArchivesSpace Reporting Stylesheet */
   <% if params[:format] === "pdf" %>
     @font-face {
-      src: url('<%= @base_url %>/fonts/unifont.ttf');
+      font-family: "DejaVu Sans";
+      src: url('<%= @base_url %>/fonts/dejavu/DejaVuSans.ttf');
       -fs-pdf-font-embed: embed;
       -fs-pdf-font-encoding: Identity-H;
     }
+
     body {
-      font-family: unifont, Arial, sans-serif;
+      font-family: "DejaVu Sans", sans-serif;
     }
   <% else %>
     body {
@@ -37,6 +39,10 @@
     border: 1px solid #AAA;
     padding: 4px;
     vertical-align: top;
+  }
+
+  .report-listing th {
+    background-color: #F1F1F1;
   }
 
   .report-listing tr:nth-child(2n-1) td {
