WIP tweak the header to offer a global and repository based navbar

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -277,18 +277,18 @@ h4 > .context-help {
   display: inline-block;
   margin: 5px 0 -5px !important;
   .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
-  .border-radius(4px 0 0 4px);
   #font > .sans-serif(13px, normal, 30px);
   margin-bottom: 0;
   background-color: #e9e9e9;
   overflow: hidden;
   max-width: 200px;
-  box-shadow: inset -2px 0px 3px #CCC;
+  .border-radius(4px);
+}
 
-  .repository-label, .user-label {
-    max-width: 100px;
-    overflow: hidden;
-    display: inline-block;
+.input-append {
+  .inset-label {
+    .box-shadow("inset -2px 0px 3px #CCC");
+    .border-radius(4px 0 0 4px);
   }
 }
 
