--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -1,3 +1,15 @@
+.global-header {
+  position:  relative;
+  padding:  0 20px;
+  .navbar {
+    position: absolute;
+    right:  0;
+  }
+  .navbar-inner {
+    .border-radius(0 0 4px 4px);
+  }
+}
+
 // header customisations
 
 .navbar {
@@ -52,31 +64,29 @@
 }
 
 // user logged in container
+.repo-container,
 .user-container {
   .dropdown-toggle, .btn {
     margin-top: 5px !important;
   }
-}
-.user-label > span,
-.repository-label > span {
-  margin-right: 5px;
-}
-.user-container .dropdown-menu {
-  min-width: 80px;
-}
-
-.user-container {
+  .dropdown-menu {
+    min-width: 80px;
+  }
   .empty, .selected {
     color: #999;
   }
 
- .dropdown-submenu.pull-left {
+  .dropdown-submenu.pull-left {
     > .dropdown-menu {
       left: -140%;
       right: auto;
       min-width: 140%;
     }
- }
+  }
+}
+.user-label > span,
+.repository-label > span {
+  margin-right: 5px;
 }
 
 .repository-label.empty {
@@ -95,4 +105,15 @@
     color: @linkColor;
     white-space: normal;
   }
+}
+
+.repository-header.container .navbar {
+  margin: 0 -21px;
+  .navbar-inner {
+    .border-radius(4px 4px 0 0);
+  }
+}
+
+header .inset-label {
+  min-width: 100px;
 }
