--- a/frontend/app/views/site/_branding.html.erb
+++ b/frontend/app/views/site/_branding.html.erb
@@ -1,1 +1,3 @@
-<div class="container branding"></div>
+<div class="container branding">
+  <%= image_tag "archivesspace/archivesspace.small.png" %>
+</div>
