--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -16,6 +16,8 @@ h2 > .label {
 
 .breadcrumb {
   margin-top: -@baseLineHeight;
+  #gradient > .vertical(#efefef, #eaeaea);
+  padding: 5px 10px;
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
 
   .return-to-search {
