Fix tree icons being overridden... boo

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -75,7 +75,7 @@
     }
 
     a > .jstree-icon {
-      background-position: -384px -120px !important;
+      background-position: -384px -120px;
     }
   }
 
