Move Select a Repository to a top level navbar item with a dropdown selector;

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -66,6 +66,8 @@
 // user logged in container
 .repo-container,
 .user-container {
+  margin-left: 5px;
+
   .dropdown-toggle, .btn {
     margin-top: 5px !important;
   }
@@ -116,4 +118,15 @@
 
 header .inset-label {
   min-width: 100px;
+}
+
+// select-a-repository popover
+.select-a-repository {
+  ul {
+    padding:  15px;
+  }
+
+  .btn-primary {
+    width:  100%;
+  }
 }
