--- a/frontend/app/views/shared/_header_global.html.erb
+++ b/frontend/app/views/shared/_header_global.html.erb
@@ -2,14 +2,21 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-          <%= link_to I18n.t("navbar.brand"), {:controller => :welcome, :action => :index}, :class => "brand" %>
-          <ul class="nav pull-right">
-           <%= render "shared/header_user" %>
-           <% if ArchivesSpaceHelp.enabled? %>
-             <li><%= link_to_help :link_opts => {"data-placement" => (session[:user] ? "left" : "bottom")} %></li>
-           <% end %>
-         </ul>
-      </div>
+        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-global-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="nav-collapse nav-global-collapse collapse">
+            <%= link_to I18n.t("navbar.brand"), {:controller => :welcome, :action => :index}, :class => "brand" %>
+            <ul class="nav pull-right">
+             <%= render "shared/header_user" %>
+             <% if ArchivesSpaceHelp.enabled? %>
+               <li><%= link_to_help :link_opts => {"data-placement" => (session[:user] ? "left" : "bottom")} %></li>
+             <% end %>
+           </ul>
+          </div><!-- nav-collapse -->
+      </div><!-- container -->
     </div><!-- /navbar-inner -->
   </div>
 </div>
