--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -1,9 +1,7 @@
 <%= setup_context :title => @manage_access ? I18n.t("user._html.section.manage_access") : I18n.t("user._html.plural") %>
 
 <div class="row-fluid">
-   <div class="span3">
-      The facets/search filters will go here.
-   </div>
+   <div class="span3"></div>
    <div class="span9">
     <div class="record-pane">
 
