WIP Scoped reports
Scope reports by repository

Show info message if there are no repositories available to a user (lost after redesign);

Fix report tests after repo scoping change

--- a/backend/app/views/reports/_footer.erb
+++ b/backend/app/views/reports/_footer.erb
@@ -1,6 +1,7 @@
 <% time = DateTime.now %>
 <div id="footer" class="footer" style="position: running(footer);">
   <div class="timestamp">
+    <% if params[:repo_id] %>Scoped for Repository: <%= params[:repo_id] %><br/><% end %>
     Report Generated at <%= time.strftime("%Y-%m-%d %H:%M %Z") %>
   </div>
 
