--- a/frontend/app/views/reports/index.html.erb
+++ b/frontend/app/views/reports/index.html.erb
@@ -9,15 +9,15 @@
         <% @report_data["reports"].values.each do | report | %>
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#reportListing" href="#reportListing_<%= report["model"] %>">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#reportListing" href="#reportListing_<%= report["uri_suffix"] %>">
                 <%= I18n.t("reports.#{report["model"]}", :default => report["model"]) %>
               </a>
             </div>
-            <div id="reportListing_<%= report["model"] %>" class="accordion-body collapse <% if @report_errors && @report && report['model'] === @report['model'] %>in<% end %>">
+            <div id="reportListing_<%= report["uri_suffix"] %>" class="accordion-body collapse <% if @report_errors && @report && report['model'] === @report['model'] %>in<% end %>">
               <div class="accordion-inner">
                 <p><%= report['description'] %></p>
                 <hr/>
-              <% if @report_errors %>
+              <% if @report_errors && @report["uri_suffix"] === report["uri_suffix"] %>
                 <div class="alert alert-error">
                   <% @report_errors['error'].each do | field, msgs |%>
                   <div><%= I18n.t("reports.parameters.#{field}", :default => field) %> - <%= msgs.join(", ") %></div>
@@ -25,19 +25,21 @@
                 </div>
               <% end %>
               <%= form_tag({:action => :download}, {:class => 'form-horizontal form-report'}) do |f| %>
-                <%= hidden_field_tag "model", report["model"] %>
-                  <%= fields_for 'report_params' do | report_params | %>
-                    <% if report["params"].length > 1 %>
-                      <% report["params"].each do | param |
-                        next if param[0] === "format"
-                      %>
-                        <div class="control-group <% if @report_errors && @report_errors['error'].has_key?(param[0]) %>error<% end %>">
+                <%= hidden_field_tag "report_key", report["uri_suffix"] %>
+                  <%= fields_for 'report_params' do | report_params_form | %>
+                    <%
+                       report_params = report["params"].reject{|p| ["format", "repo_id"].include?(p[0])}
+
+                       if report_params.length > 1
+                    %>
+                      <% report_params.each do | param | %>
+                        <div class="control-group <% if @report_errors &&  @report["uri_suffix"] === report["uri_suffix"] && @report_errors['error'].has_key?(param[0]) %>error<% end %>">
                           <label class="control-label"><%= I18n.t("reports.parameters.#{param[0]}", :default => param[0]) %></label>
                           <div class="controls">
                             <% if param[1] === "DateTime" %>
-                              <%= report_params.text_field param[0].intern, :class => 'date-field', :'data-date-format' => 'yyyy-mm-dd' %>
+                              <%= report_params_form.text_field param[0].intern, :class => 'date-field', :'data-date-format' => 'yyyy-mm-dd' %>
                             <% else %>
-                              <%= report_params.text_field param[0].intern %>
+                              <%= report_params_form.text_field param[0].intern %>
                             <% end %>
                           </div>
                         </div>
@@ -47,7 +49,7 @@
                     <div class="control-group">
                       <label class="control-label">Format</label>
                       <div class="controls">
-                        <%= report_params.select :format, @report_data["formats"].map{|format| [I18n.t("reports.formats.#{format}", :default => format), format]} %>
+                        <%= report_params_form.select :format, @report_data["formats"].map{|format| [I18n.t("reports.formats.#{format}", :default => format), format]} %>
                       </div>
                     </div>
                     <div class="form-actions">
