--- a/frontend/app/views/instances/_template.html.erb
+++ b/frontend/app/views/instances/_template.html.erb
@@ -2,11 +2,6 @@
 
 <% define_template "instance_container", jsonmodel_definition(:instance) do |form| %>
   <div class="subrecord-form-fields">
-    <h4 class="subrecord-form-heading">
-      <% if form["instance_type"] %>
-        <%= I18n.t("enumerations.instance_instance_type.#{form.obj["instance_type"]}", :default => form.obj["instance_type"]) %>
-      <% end %>
-    </h4>
     <div class="subrecord-form-container">
       <%= form.label_and_select "instance_type", form.possible_options_for('instance_type', true).reject{|option_arr| option_arr[1] === 'digital_object'} %>
       <%= form.fields_for(form["container"] || {}, "container") do |item| %>
@@ -18,13 +13,8 @@
 
 <% define_template "instance_digital_object", jsonmodel_definition(:instance) do |form| %>
   <div class="subrecord-form-fields">
-    <h4 class="subrecord-form-heading">
-      <% if form["instance_type"] %>
-        <%= I18n.t("enumerations.instance_instance_type.#{form.obj["instance_type"]}", :default => form.obj["instance_type"]) %>
-      <% end %>
-    </h4>
     <div class="subrecord-form-container">
-      <%= form.hidden_input "instance_type" %>
+      <%= form.hidden_input "instance_type", "digital_object" %>
       <%= form.fields_for(form["digital_object"] || {}, "digital_object") do |item| %>
         <%= render :partial => "digital_objects/linker", :locals => {:form => form} %>
       <% end %>
