Make unprocessed_accessions_report show accessions without a collection management record and those with NULL status values; warn developers if a report URI has already been registered (as exception was being raised after hotcode replacement); Default format in report form to previously selected value upon receiving an error;

--- a/frontend/app/views/reports/index.html.erb
+++ b/frontend/app/views/reports/index.html.erb
@@ -49,7 +49,7 @@
                     <div class="control-group">
                       <label class="control-label">Format</label>
                       <div class="controls">
-                        <%= report_params_form.select :format, @report_data["formats"].map{|format| [I18n.t("reports.formats.#{format}", :default => format), format]} %>
+                        <%= report_params_form.select :format, options_for_select(@report_data["formats"].map{|format| [I18n.t("reports.formats.#{format}", :default => format), format]}, params[:report_params]?params[:report_params][:format]:nil) %>
                       </div>
                     </div>
                     <div class="form-actions">
